src/snapshots/cornercase__ui__tests__draw__renders_active_screen_in_pane.snap
---
source: src/ui.rs
assertion_line: 6860
expression: render(&v).backend()
---
"  ⌕ search projects, workspaces, tabs                    │ $ echo hello                             "
"                                                         │ hello                                    "
" Projects                      │ Workspaces              │ $                                        "
"                               │                         │                                          "
"▌ ~ (1)                        │                         │                                          "
"                               │                         │                                          "
"  + New                        │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  Settings                     │                         │                                          "
"  Usage                        │                         │                                          "
"  Quit                         │                         │                                          "
