src/snapshots/cornercase__ui__tests__draw__renders_sidebar_with_active_entry.snap
---
source: src/ui.rs
assertion_line: 6816
expression: render(&v).backend()
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" Projects                      │ Workspaces              │                                          "
"                               │                         │                                          "
"  cornercase (1)               │                         │                                          "
"▌ tmp (1)                      │                         │                                          "
"                               │                         │                                          "
"  + New                        │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  Settings                     │                         │                                          "
"  Usage                        │                         │                                          "
"  Quit                         │                         │                                          "
