src/snapshots/cornercase__ui__tests__draw__shows_the_workspace_count_next_to_the_name.snap
---
source: src/ui.rs
assertion_line: 6824
expression: render(&v).backend()
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" Projects                      │ Workspaces              │                                          "
"                               │                         │                                          "
"  cornercase (3)               │                         │                                          "
"▌ api (1)                      │                         │                                          "
"  tmp (0)                      │                         │                                          "
"                               │                         │                                          "
"  + New                        │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  Settings                     │                         │                                          "
"  Usage                        │                         │                                          "
"  Quit                         │                         │                                          "
