src/snapshots/cornercase__ui__tests__draw__without_projects_the_pane_shows_the_logo.snap
---
source: src/ui.rs
expression: "render_sized(&view(&[]), W, 24).backend()"
---
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                               │                         │                                          "
"  + new project                │                         │                                          "
"                               │                         │                                          "
"                               │                         │                  █████████               "
"                               │                         │               ▄▄▄▀▀▀▀▀▀▀▀▀               "
"                               │                         │               ███                        "
"                               │                         │               ███   ██                   "
"                               │                         │               ███   ██                   "
"                               │                         │               ███   ▀▀                   "
"                               │                         │                                          "
"                               │                         │                cornercase                "
"                               │                         │       every agent in its own corner      "
"                               │                         │                                          "
"                               │                         │       + new project opens a folder       "
"                               │                         │                                          "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │                         │                                          "
"  quit                         │                         │                                          "
